--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.16",
     "cli": "^1.0.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "styled-components": "^6.1.9"
   }
 }
